# project-2427

./: Cargo.toml
src/: main.rs
topics/p2p-transfer-protocol/: .gitignore  Cargo.toml  out_file
topics/p2p-transfer-protocol/docs/: README.md  architecture.md
topics/p2p-transfer-protocol/src/: listener.rs  main.rs  protocol.rs  sender.rs
topics/p2p-transfer-protocol/src/client/: mod.rs
topics/p2p-transfer-protocol/src/protocol/: connection_state.rs  message.rs  mod.rs
topics/p2p-transfer-protocol/src/server/: connection.rs  events.rs  mod.rs
topics/tic-tac-toe/: .gitignore  Cargo.toml  README.md  clippy.toml
topics/tic-tac-toe/docs/: architecture.md  usage.md
topics/tic-tac-toe/src/: ai.rs  board.rs  game.rs  lib.rs  main.rs  types.rs  ui.rs
topics/tic-tac-toe/src/ai/: minimax.rs  mod.rs  strategy.rs
topics/tic-tac-toe/src/board/: lines.rs  mod.rs
topics/tic-tac-toe/src/game/: board.rs  game.rs  mod.rs  player.rs  robot.rs  rules.rs
topics/tic-tac-toe/src/logic/: game.rs  grid.rs
topics/tic-tac-toe/src/player/: ai_minmax.rs  mod.rs  (+1 more)
topics/tic-tac-toe/tests/: ai_tests.rs  board_tests.rs  game_tests.rs
topics/tic_tac_toe/: Cargo.toml  README_EN.md
topics/tic_tac_toe/docs/: architecture_EN.md
topics/tic_tac_toe/src/: board.rs  game.rs  lib.rs  main.rs
topics/tic_tac_toe/tests/: ai_test.rs  board_tests.rs  game_test.rs  human_player_test.rs
topics/web-scraper/: Cargo.toml
topics/web-scraper/docs/: architecture.md
topics/web-scraper/src/: cli.rs  crawler.rs  downloader.rs  main.rs  parser.rs  scraper.rs  storage.rs  worker.rs
(+7 files in other folders)
